--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Pomodoro Task Manager</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Details</a></li>
+        <li><a href="index.js">Home-1</a></li>
+        <li><a href="details.html">Details</a></li>
         <li><a href="#">Timer</a></li>
         <li><a href="#">To-Do List</a></li>
       </ul>
