--- a/timer.html
+++ b/timer.html
@@ -18,8 +18,8 @@
       </ul>
     </nav>
   </header>
-<section class="details">
-    <h2>You have selected Details page </h2>
+<section class="timer">
+    <h2>You have selected Timer page </h2>
     <p>Stay focused. Stay organized. Crush your goals!</p>
 </section>
   
