--- a/todolist.html
+++ b/todolist.html
@@ -18,8 +18,8 @@
       </ul>
     </nav>
   </header>
-<section class="details">
-    <h2>You have selected Details page </h2>
+<section class="todolist">
+    <h2>You have selected To Do List page </h2>
     <p>Stay focused. Stay organized. Crush your goals!</p>
 </section>
   
