--- a/timer.html
+++ b/timer.html
@@ -7,21 +7,21 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- <header>
+  <header>
     <h1>Pomodoro Task Manager</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="details.html">Details</a></li>
-        <li><a href="timer.html">Timer</a></li>
+        <li><a href="timer.html" class="active">Timer</a></li>
         <li><a href="todolist.html">To-Do List</a></li>
       </ul>
     </nav>
   </header>
-<section class="timer">
-    <h2>You have selected Timer page </h2>
+
+  <section class="timer">
+    <h2>You have selected Timer page</h2>
     <p>Stay focused. Stay organized. Crush your goals!</p>
-</section>
-  
+  </section>
 </body>
 </html>
