--- a/todolist.html
+++ b/todolist.html
@@ -7,21 +7,24 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- <header>
+  <header>
     <h1>Pomodoro Task Manager</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="details.html">Details</a></li>
         <li><a href="timer.html">Timer</a></li>
-        <li><a href="todolist.html">To-Do List</a></li>
+        <li><a href="todolist.html" class="active">To-Do List</a></li>
       </ul>
     </nav>
   </header>
-<section class="todolist">
-    <h2>You have selected To Do List page </h2>
-    <p>Stay focused. Stay organized. Crush your goals!</p>
-</section>
-  
+
+  <main>
+    <section class="todolist">
+      <h2>📝 To-Do List Page</h2>
+      <p>Stay focused. Stay organized. Crush your goals!</p>
+    </section>
+  </main>
 </body>
 </html>
+
