--- a/details.html
+++ b/details.html
@@ -19,28 +19,29 @@
     </nav>
   </header>
 
-  <section class="details">
-    <h2>About the Pomodoro Technique</h2>
-    <p>The <strong>Pomodoro Technique</strong> is a time management method that uses a timer to break down work into intervals, typically 25 minutes in length, separated by short breaks.</p>
+  <section>
+  <h2>About the Pomodoro Technique</h2>
+  <p>The <strong>Pomodoro Technique</strong> is a time management method that uses a timer to break down work into intervals, typically 25 minutes in length, separated by short breaks.</p>
 
-    <h3>How It Works</h3>
-    <ol>
-      <li>Pick a task you want to work on.</li>
-      <li>Set the Pomodoro Timer for 25 minutes.</li>
-      <li>Work on the task until the timer rings.</li>
-      <li>Take a short 5-minute break.</li>
-      <li>Repeat the process. After 4 Pomodoros, take a longer break (15–30 minutes).</li>
-    </ol>
+  <h3>How It Works</h3>
+  <ol>
+    <li>Pick a task you want to work on.</li>
+    <li>Set the Pomodoro Timer for 25 minutes.</li>
+    <li>Work on the task until the timer rings.</li>
+    <li>Take a short 5-minute break.</li>
+    <li>Repeat the process. After 4 Pomodoros, take a longer break (15–30 minutes).</li>
+  </ol>
 
-    <h3>Why Use It?</h3>
-    <ul>
-      <li>Boosts focus and productivity</li>
-      <li>Reduces mental fatigue</li>
-      <li>Encourages time awareness and task planning</li>
-    </ul>
+  <h3>Why Use It?</h3>
+  <ul>
+    <li>Boosts focus and productivity</li>
+    <li>Reduces mental fatigue</li>
+    <li>Encourages time awareness and task planning</li>
+  </ul>
 
-    <p>With the <strong>Pomodoro Task Manager</strong>, you can set timers, manage your to-do list, and track your productivity—all in one place!</p>
-  </section>
+  <p>With the <strong>Pomodoro Task Manager</strong>, you can set timers, manage your to-do list, and track your productivity—all in one place!</p>
+</section>
+
 
   <footer>
     <p>© 2025 Pomodoro Task Manager. Stay focused. Stay productive!</p>
