--- a/details.html
+++ b/details.html
@@ -19,12 +19,12 @@
     </nav>
   </header>
 
-  <section>
+  <section class="details">
   <h2>About the Pomodoro Technique</h2>
   <p>The <strong>Pomodoro Technique</strong> is a time management method that uses a timer to break down work into intervals, typically 25 minutes in length, separated by short breaks.</p>
 
   <h3>How It Works</h3>
-  <ol>
+  <ol class="centered-list">
     <li>Pick a task you want to work on.</li>
     <li>Set the Pomodoro Timer for 25 minutes.</li>
     <li>Work on the task until the timer rings.</li>
@@ -33,7 +33,7 @@
   </ol>
 
   <h3>Why Use It?</h3>
-  <ul>
+  <ul class="centered-list">
     <li>Boosts focus and productivity</li>
     <li>Reduces mental fatigue</li>
     <li>Encourages time awareness and task planning</li>
@@ -41,7 +41,6 @@
 
   <p>With the <strong>Pomodoro Task Manager</strong>, you can set timers, manage your to-do list, and track your productivity—all in one place!</p>
 </section>
-
 
   <footer>
     <p>© 2025 Pomodoro Task Manager. Stay focused. Stay productive!</p>
